Complete TODOs, update CV

--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Marco Perronet"
   avatar           : "pic.jpg"
-  bio              : "PhD student at Max Planck institute for Software Systems."
-  location         : "Germany"
+  bio              : "PhD student at Max Planck Institute for Software Systems"
+  location         : "Kaiserslautern, Germany"
   employer         :
   pubmed           : 
   googlescholar    : 
