--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Marco Perronet"
   avatar           : "pic.jpg"
-  bio              : "Software Enginner Intern at Meta (London)"
+  bio              : "Software Engineer Intern at Meta (London)"
   location         : "Turin, Italy"
   employer         :
   pubmed           :
